--- a/trippy/domain.yml
+++ b/trippy/domain.yml
@@ -9,7 +9,11 @@ intents:
   - mood_unhappy
   - bot_challenge
   - hello_world
-
+  - find_Resturants
+  
+entities:
+  - source
+  - destination
 responses:
   utter_greet:
   - text: "Hey! How are you?"
@@ -38,6 +42,7 @@ actions:
   - utter_goodbye
   - utter_iamabot
   - action_hello_world
+  - action_get_resturants
 
 session_config:
   session_expiration_time: 60
